--- a/.github/workflows/python-pipeline.yml
+++ b/.github/workflows/python-pipeline.yml
@@ -18,13 +18,15 @@ jobs:
       - name: Install requirements
         run: pip install flake8 pylint
 
-      - name: Lint hello.py
-        run: |
-          flake8 hello.py
-          pylint hello.py
+    #   - name: Lint hello.py
+    #     run: |
+    #       flake8 hello.py
+    #       pylint hello.py
 
       - name: Test the script
-        run: python hello.py | grep -i hello || exit 1
+        run: python hello.py | grep -i hello
+    #   - name: Test the script
+    #     run: python hello.py | grep -i hello || exit 1
 
   build-and-push:
     name: Build and Push Container
